@@ -11,12 +11,13 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Set Customization path and URL CONSTANTS
 * Enqueue custom stylesheets in a more upgrade safe location `/wp-content/opus-primus-customs/`
 * Use single view published date for first year of copyright
+* Remove conditional customization enqueue using internal theme folder as not working (or update safe)
 
 = CSS =
 * Corrected `select` element to use "max-width" rather than "width"
 * Complete refactoring of the styles for better responsiveness
 * Fixed white space on right side of iPhone displays
-* Monster be gone! - Fixed special case many level menu in sidebar
+* Monster be gone! - addressed special case many level menu in sidebar
 
 == Version 1.2.4 ==
 * Released May 2014
